[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/room_trans_button.gd" type="Script" id=1]

[node name="room_trans_button" type="TextureButton"]
modulate = Color( 1, 1, 1, 0 )
focus_mode = 0
enabled_focus_mode = 0
expand = true
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_room_trans_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_room_trans_button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_room_trans_button_pressed"]
